# whiteflag-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entry.sh  watch.sh
.cargo/: config.toml
.github/workflows/: check.yml
scripts/: build-release.sh  build-test.sh  setup.sh
src/: README.md  error.rs  lib.rs  tests.rs
src/wf_account/: account.rs  error.rs  mod.rs  test_impl.rs
src/wf_auth/: error.rs  mod.rs  test.rs
src/wf_buffer/: common.rs  crypted_buffer.rs  decode.rs  encode.rs  hexadecimal_string.rs  mod.rs  test_field.rs  tests.rs
src/wf_codec/: README.md  binary.rs  encoding.rs  hexadecimal.rs  latlong.rs  mod.rs  tests.rs
src/wf_convert/: mod.rs
src/wf_core/: account.rs  basic_message.rs  creator.rs  crypted_buffer.rs  decoder.rs  definitions.rs  edge_case_test.rs  error.rs  field.rs  field_tests.rs  message.rs  message_feature_parity_tests.rs  message_tests.rs  mod.rs  request.rs  segment.rs  types.rs  wf_message_builder.rs  whiteflag_creator.rs
src/wf_creator/: error.rs  mod.rs
src/wf_crypto/: WhiteflagEncryptionKey.rs  cipher.rs  cipher_tests.rs  crypto_util.rs  crypto_util_tests.rs  ecdh_keypair.rs  encryption_key_tests.rs  encryption_method.rs  error.rs  keypair_tests.rs  mod.rs  wf_encryption_key.rs  wf_encryption_key_tests.rs
src/wf_field/: codec_tests.rs  definitions.rs  field.rs  field_definition.rs  mod.rs  request.rs  test.rs
src/wf_json/: deserialize.rs  mod.rs  serialize.rs  test.rs
src/wf_models/: authentication.rs  deserialize.rs  header.rs  mod.rs  serialize.rs  test.rs
src/wf_parser/: field_parser.rs  message_code_parser.rs  message_header_parser.rs  mod.rs  parsed_field_definition.rs  request.rs  test.rs  wf_header.rs
src/wf_validation/: mod.rs  test.rs  test_temp.rs
wf_account/: Cargo.toml
wf_account/src/: account.rs  lib.rs  whiteflag_account.rs
wf_auth/: Cargo.toml
wf_auth/src/: lib.rs  test.rs
wf_buffer/: Cargo.toml
wf_buffer/src/: common.rs  converions.rs  conversions.rs  decode.rs  encode.rs  lib.rs  test_field.rs
wf_cli/: Cargo.toml  README.md
wf_cli/src/: auth.rs  error.rs  lib.rs  main.rs  test.rs
wf_codec/: Cargo.toml
wf_codec/src/: encoding.rs  error.rs  hexadecimal.rs  latlong.rs  lib.rs  validation_tests.rs
wf_common/: Cargo.toml
wf_common/src/: common.rs  constants.rs  lib.rs  test.rs
wf_crypto/: Cargo.toml
wf_crypto/src/: cipher_tests.rs  crypto_util.rs  ecdh_keypair.rs  encryption_method.rs  error.rs  keypair_tests.rs  lib.rs  wf_encryption_key.rs
wf_field/: Cargo.toml
wf_field/src/: byte_configuration.rs  codec_positions.rs  codec_tests.rs  definitions.rs  error.rs  field.rs  field_definition.rs  field_definition_parser.rs  header.rs  header_order.rs  lib.rs  message_body_type.rs  message_header.rs  parsed_field_definition.rs  request.rs  test_field_definition.rs  types.rs  validation_test.rs
wf_field/src/message_body_types/: authentication.rs  crypto.rs  freetext.rs  mod.rs  resource.rs  signal.rs
wf_parser/: Cargo.toml
wf_parser/src/: header.rs  lib.rs  message_code_parser.rs  message_header_parser.rs  parsed_field_definition.rs  parser.rs  test.rs  wf_header.rs
wf_validation/: Cargo.toml
wf_validation/src/: lib.rs
