[package]
name = "fennel-whiteflag"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["wf_common", "wf_validation", "wf_codec", "wf_field", "wf_crypto", "wf_buffer"]


[dependencies]
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
aes_tools = { git = "https://github.com/fennelLabs/fennel-lib", branch = "master" }
wf_common = { path = "wf_common" }
wf_validation = { path = "wf_validation" }
wf_codec = { path = "wf_codec" }
wf_field = { path = "wf_field" }
wf_crypto = { path = "wf_crypto" }
wf_auth = { path = "wf_auth" }
wf_buffer = { path = "wf_buffer" }
wf_parser = { path = "wf_parser" }
wf_account = { path = "wf_account" }