[package]
name = "wf_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
fennel-whiteflag = {path = "../"}
wf_crypto = {path = "../wf_crypto"}
wf_field = {path = "../wf_field"}