[package]
name = "wf_field"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wf_common = { path = "../wf_common" }
wf_validation = { path = "../wf_validation" }
wf_codec = { path = "../wf_codec" }
regex = "1.5.5"
hex = "0.4.3"
lazy_static = "1.4.0"
paste = "1.0.9"
